Changes in version 0.8.0

o 'bootEGA' now computes time until bootstrap is finished


Changes in version 0.7.0

o fixed 'EGA' bug in 'bootEGA' function; updated 'bootEGA' documentation; added progress messages

o migrated 'net.scores' and 'net.loads' from 'NetworkToolbox' to 'EGAnet' package

o functions 'itemConfirm' and 'itemIdent' have been merged into a single function called, 'itemStability'

o fixed item ordering in 'itemStability' output so dimensions are from least to greatest, the colors match the original community vector input, and updated average standardized network loadings to the 'net.loads' function

o added datasets 'ega.wmt' and 'boot.wmt' for quick user-friendly examples (also removed all '\donttest')

o added package help page

o added package load message

o updated 'itemStability' algorithm (now can accept any number of 'orig.wc') and enforced '0' to '1' bounds on plot