@@ -1,7 +1,7 @@
 Package: EGAnet
 Title: Exploratory Graph Analysis - A Framework for Estimating the Number of Dimensions in Multivariate Data Using Network Psychometrics
-Version: 0.7
-Date: 2019-07-24
+Version: 0.8
+Date: 2019-09-12
 Authors@R: c(person("Hudson", "Golino", email = "hfg9s@virginia.edu",
                   role = c("aut", "cre")), person("Alexander", "Christensen", 
                   email = "alexpaulchristensen@gmail.com", role = "aut"),
@@ -20,7 +20,7 @@ Imports: qgraph (>= 1.4.1), semPlot (>= 1.0.1),
         Matrix (>= 1.2), plotly (>= 4.7.1), mvtnorm (>= 1.0.8),
         corpcor (>= 1.6.9), ggpubr (>= 0.2), iterators (>= 1.0.10), 
         stats, plyr (>= 1.8.4), matrixcalc (>= 1.0-3), ggplot2 (>= 3.1.0),
-        pbapply
+        pbapply, OpenMx (>= 2.11.5)
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
