@@ -11,17 +11,26 @@ export(EBICglasso.qgraph)
 export(EGA)
 export(EGA.fit)
 export(bootEGA)
+export(cmi)
 export(dynamic.plot)
 export(entropyFit)
 export(itemStability)
 export(net.loads)
 export(net.scores)
+export(residualEGA)
 export(tefi)
 export(vn.entropy)
+importFrom(Matrix,nearPD)
+importFrom(OpenMx,mxData)
+importFrom(OpenMx,mxModel)
+importFrom(OpenMx,mxPath)
+importFrom(OpenMx,mxRefModels)
+importFrom(OpenMx,mxStandardizeRAMpaths)
+importFrom(OpenMx,mxTryHard)
 importFrom(dplyr,"%>%")
-importFrom(foreach,"%dopar%")
 importFrom(iterators,iter)
 importFrom(iterators,nextElem)
+importFrom(qgraph,cor_auto)
 importFrom(stats,cor)
 importFrom(stats,cov)
 importFrom(stats,cov2cor)
@@ -31,4 +40,5 @@ importFrom(stats,qt)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(utils,combn)
 importFrom(utils,packageDescription)
