@@ -5,7 +5,7 @@
 #'
 #' @param data A dataframe with the variables to be used in the analysis or a correlation matrix.
 #'
-#' @param plot.network Logical.
+#' @param network Logical.
 #' If TRUE, returns a plot of the conditional mutual information network.
 #' Defaults to FALSE.
 #'
@@ -15,33 +15,19 @@
 #' @param steps Number of steps to be used in \code{\link[igraph]{cluster_walktrap}} algorithm (necessary only if the EGA argument is set to TRUE).
 #' Defaults to 4.
 #'
-#' @author Hudson F. Golino <hfg9s at virginia.edu>#'
+#' @param scale Logical.
+#' If TRUE, the conditional mutual information will be scaled using the following formula: trace(X)/p, where X is the matrix with the conditional
+#' mutual information and p is the number of variables.
+#'
+#' @author Hudson F. Golino <hfg9s at virginia.edu>
 #'
 #' @examples
 #'
 #' \donttest{
-#' #estimate EGA
-#' ega.wmt <- EGA(data = wmt2[,7:24], model = "glasso", plot.EGA = TRUE)
+#' #estimate EGA using CMI:
 #'
+#' cmi1 <- cmi(data = depression[,48:68], network = FALSE, EGA = TRUE, steps = 4, scale = TRUE)
 #'
-#' #estimate EGAtmfg
-#' ega.wmt <- EGA(data = wmt2[,7:24], model = "TMFG", plot.EGA = TRUE)
-#'
-#' #summary statistics
-#' summary(ega.wmt)
-#'
-#' #plot
-#' plot(ega.wmt)
-#'
-#' #estimate EGA
-#' ega.intel <- EGA(data = intelligenceBattery[,8:66], model = "glasso", plot.EGA = TRUE)
-#'
-#' #summary statistics
-#' summary(ega.intel)
-#'
-#' #plot
-#' plot(ega.intel)
-#' }
 #' @seealso \code{\link{bootEGA}} to investigate the stability of EGA's estimation via bootstrap
 #' and \code{\link{EGA}} to apply the exploratory graph analysis techinique.
 #'
@@ -57,7 +43,7 @@
 #' @export
 #'
 #'
-cmi <- function(data, network = FALSE, EGA = TRUE, steps = 4){
+cmi <- function(data, network = FALSE, EGA = TRUE, steps = 4, scale = TRUE){
   if(nrow(data)!=ncol(data)){
     cor.data <- qgraph::cor_auto(data)
   } else{
@@ -67,7 +53,12 @@ cmi <- function(data, network = FALSE, EGA = TRUE, steps = 4){
   pcor <- -cov2cor(pcor)
   cmi <- -(1/2)*log10(1-pcor)
 
-  #diag(cmi) <- 1
+  if(scale == TRUE){
+    cmi <- cmi/(sum(diag(cmi))/ncol(cmi))
+    cmi <- -cmi
+    diag(cmi) <- -diag(cmi)
+  }
+
   if(network==TRUE){
     qgraph::qgraph(cmi, layout = "spring", vsize = 6)
   }
@@ -104,6 +95,8 @@ cmi <- function(data, network = FALSE, EGA = TRUE, steps = 4){
     a <- list()
     a$cmi <- cmi
 
-  }
+    }
+  class(a) <- "CMI"
   return(a)
 }
+#----
